--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -337,7 +337,7 @@
             <objects>
                 <viewController storyboardIdentifier="NetworkingViewController" id="Lf2-YB-DYM" customClass="NetworkingViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FDa-dO-WKK">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mN3-hJ-eFw">
@@ -847,7 +847,7 @@
             <objects>
                 <viewController id="6AR-Am-Pii" customClass="ImageViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ooJ-QK-DGj">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="w3V-hJ-NmC"/>
@@ -858,7 +858,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="e93-Ps-QzB" firstAttribute="leading" secondItem="ooJ-QK-DGj" secondAttribute="leading" type="default" id="KTc-S6-Pd0"/>
-                            <constraint firstAttribute="bottom" secondItem="w3V-hJ-NmC" secondAttribute="bottom" constant="174" id="ZVK-gR-5qV"/>
+                            <constraint firstAttribute="bottom" secondItem="w3V-hJ-NmC" secondAttribute="bottom" constant="214" id="Vu8-KX-VWi"/>
                             <constraint firstItem="w3V-hJ-NmC" firstAttribute="trailing" secondItem="ooJ-QK-DGj" secondAttribute="trailing" type="default" id="fUn-xg-aF8"/>
                             <constraint firstItem="w3V-hJ-NmC" firstAttribute="leading" secondItem="ooJ-QK-DGj" secondAttribute="leading" type="default" id="fZP-ix-SBO"/>
                             <constraint firstItem="e93-Ps-QzB" firstAttribute="bottom" secondItem="ooJ-QK-DGj" secondAttribute="bottom" type="default" id="hzk-l5-X5x"/>
@@ -876,6 +876,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="scrollView" destination="w3V-hJ-NmC" id="Ls2-oa-91R"/>
+                        <outlet property="toolbar" destination="e93-Ps-QzB" id="LSP-Ii-8UY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Vd-fR-HUc" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -887,7 +888,7 @@
             <objects>
                 <viewController storyboardIdentifier="EventUIViewController" id="BoZ-sp-bTT" customClass="EventUIViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ljv-Zl-qK0">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aPc-Sj-Njm">
@@ -965,7 +966,7 @@
             <objects>
                 <viewController storyboardIdentifier="SearchViewController" id="ava-bD-PPQ" customClass="SearchViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xIz-FD-Qmo">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6BL-ln-IJY">
@@ -1138,7 +1139,7 @@
             <objects>
                 <viewController storyboardIdentifier="NoteViewController" id="Djl-U9-qqq" customClass="NoteViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lXc-zi-VKq">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jJ5-4O-OME">
@@ -1249,7 +1250,6 @@
         <class className="AllNetworkingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNetworkingViewController.h"/>
             <relationships>
-                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
                 <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
@@ -1264,6 +1264,7 @@
         <class className="AllNotificationViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNotificationViewController.h"/>
             <relationships>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="tableNotifications" candidateClass="UITableView"/>
             </relationships>
         </class>
@@ -1304,13 +1305,17 @@
         <class className="ImageViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ImageViewController.h"/>
             <relationships>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
             </relationships>
         </class>
         <class className="KNMultiItemSelector" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/KNMultiItemSelector.h"/>
             <relationships>
+                <relationship kind="action" name="goBack:" candidateClass="UIButton"/>
                 <relationship kind="action" name="goHome:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="action" name="goSearch:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="searchTextField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
@@ -1379,11 +1384,11 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Tet-2Z-6LC"/>
-        <segue reference="yYa-b4-9nU"/>
-        <segue reference="Ixr-QI-REd"/>
-        <segue reference="vap-t8-tVb"/>
-        <segue reference="83h-jB-Zo5"/>
         <segue reference="XYc-KS-Og4"/>
+        <segue reference="83h-jB-Zo5"/>
+        <segue reference="CUQ-7U-pfd"/>
+        <segue reference="vap-t8-tVb"/>
+        <segue reference="Ixr-QI-REd"/>
+        <segue reference="yYa-b4-9nU"/>
     </inferredMetricsTieBreakers>
 </document>
