--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -49,9 +49,12 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="iConfs" id="Y2H-He-Qzr"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="emailField" destination="crb-5Q-NBr" id="Oz1-Y3-Iwz"/>
                         <outlet property="passwordField" destination="Qic-FU-Cwb" id="JAe-i0-AOp"/>
+                        <outlet property="toolbar" destination="Y2H-He-Qzr" id="ggk-7Z-2ZA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q86-Wv-zlY" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -63,7 +66,7 @@
             <objects>
                 <viewController storyboardIdentifier="PersonalProgramTKCalendarDayViewController" id="qBv-ti-Psr" customClass="PersonalProgramTKCalendarDayViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9pe-7h-TRE">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="adV-Kh-K5h">
@@ -79,11 +82,17 @@
                                     <segue destination="BoZ-sp-bTT" kind="push" identifier="segue6" id="5s0-9K-Shm"/>
                                 </connections>
                             </button>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yth-hQ-vyt">
+                                <items/>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="adV-Kh-K5h" secondAttribute="trailing" constant="85" id="CDU-iv-Ye4"/>
                             <constraint firstItem="adV-Kh-K5h" firstAttribute="top" secondItem="9pe-7h-TRE" secondAttribute="top" constant="190" id="Et5-OL-bCT"/>
+                            <constraint firstItem="Yth-hQ-vyt" firstAttribute="bottom" secondItem="9pe-7h-TRE" secondAttribute="bottom" type="default" id="UGX-W3-MC0"/>
+                            <constraint firstItem="Yth-hQ-vyt" firstAttribute="leading" secondItem="9pe-7h-TRE" secondAttribute="leading" type="default" id="dJX-5y-AGs"/>
+                            <constraint firstItem="Yth-hQ-vyt" firstAttribute="trailing" secondItem="9pe-7h-TRE" secondAttribute="trailing" type="default" id="eiD-I4-1fR"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="bpu-1F-FdQ">
@@ -99,7 +108,7 @@
             <objects>
                 <viewController storyboardIdentifier="HomeViewController" title="HomePageIConfs" id="9qT-Qf-qzL" customClass="HomeViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qAQ-Vj-hDn">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jjm-gF-B4D">
@@ -326,6 +335,11 @@
                                 <action selector="updateButton:" destination="9qT-Qf-qzL" id="lZt-Ip-svx"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Logout" id="b7b-Yd-ODX">
+                            <connections>
+                                <segue destination="MSP-a8-Vhu" kind="push" id="8hN-KL-ukg"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QdX-JP-ijD" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -504,7 +518,7 @@
             <objects>
                 <viewController storyboardIdentifier="AllNotificationViewController" id="dJg-70-ExF" customClass="AllNotificationViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="K2u-Ba-JFn">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="t2Z-Lh-UbO">
@@ -562,7 +576,7 @@
             <objects>
                 <viewController storyboardIdentifier="NotificationViewController" id="lJj-qs-c5f" customClass="NotificationViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aIq-VG-R5S">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SLu-DU-T0g">
@@ -632,7 +646,7 @@
             <objects>
                 <viewController id="nTu-J4-A0h" customClass="AllNetworkingViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Gmq-er-5np">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="N9S-Ts-YbY">
@@ -690,7 +704,7 @@
             <objects>
                 <viewController storyboardIdentifier="CommunicationViewController" title="CommunicationViewController" id="Xau-kq-OwU" customClass="CommunicationViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="E4x-fq-fpf">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="sgs-th-nFd">
@@ -1087,7 +1101,7 @@
             <objects>
                 <viewController id="1GJ-Uz-eL2" customClass="AllNotesViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WfL-Pm-VTy">
-                        <rect key="frame" x="0.0" y="64" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="8PX-xz-DNH">
@@ -1300,6 +1314,7 @@
             <relationships>
                 <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="passwordField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UINavigationItem"/>
             </relationships>
         </class>
         <class className="ImageViewController" superclassName="UIViewController">
@@ -1313,9 +1328,6 @@
         <class className="KNMultiItemSelector" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/KNMultiItemSelector.h"/>
             <relationships>
-                <relationship kind="action" name="goBack:" candidateClass="UIButton"/>
-                <relationship kind="action" name="goHome:" candidateClass="UIBarButtonItem"/>
-                <relationship kind="action" name="goSearch:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="searchTextField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
@@ -1327,6 +1339,7 @@
         <class className="NetworkingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NetworkingViewController.h"/>
             <relationships>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="navigationBar" candidateClass="UINavigationBar"/>
                 <relationship kind="outlet" name="networkingDescription" candidateClass="UITextView"/>
                 <relationship kind="outlet" name="networkingTitle" candidateClass="UILabel"/>
@@ -1340,6 +1353,7 @@
                 <relationship kind="action" name="addNote:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="action" name="addPerson:" candidateClass="UIButton"/>
                 <relationship kind="action" name="addSession:" candidateClass="UIButton"/>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="aboutPersonButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="aboutSessionButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="noteTextView" candidateClass="UITextView"/>
@@ -1357,6 +1371,8 @@
         <class className="PersonProfileViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonProfileViewController.h"/>
             <relationships>
+                <relationship kind="action" name="addNote:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="addNote" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="tableNetworking" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
@@ -1364,11 +1380,15 @@
         </class>
         <class className="PersonalProgramTKCalendarDayViewController" superclassName="TKCalendarDayViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PersonalProgramTKCalendarDayViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
+            </relationships>
         </class>
         <class className="SearchViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SearchViewController.h"/>
             <relationships>
                 <relationship kind="action" name="doSearch:" candidateClass="UIButton"/>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="resultsOfSearch" candidateClass="UITableView"/>
                 <relationship kind="outlet" name="searchBar" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
@@ -1384,8 +1404,9 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="XYc-KS-Og4"/>
-        <segue reference="83h-jB-Zo5"/>
+        <segue reference="H5z-u7-vJR"/>
+        <segue reference="8hN-KL-ukg"/>
+        <segue reference="5s0-9K-Shm"/>
         <segue reference="CUQ-7U-pfd"/>
         <segue reference="vap-t8-tVb"/>
         <segue reference="Ixr-QI-REd"/>
