--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -988,7 +988,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rIm-rk-VWK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1542" y="-951"/>
+            <point key="canvasLocation" x="1829" y="-899"/>
         </scene>
         <!--Search View Controller - Search-->
         <scene sceneID="4Qy-nA-PKK">
@@ -1117,7 +1117,7 @@
             <objects>
                 <viewController id="1GJ-Uz-eL2" customClass="AllNotesViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WfL-Pm-VTy">
-                        <rect key="frame" x="0.0" y="20" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="8PX-xz-DNH">
@@ -1155,8 +1155,10 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="addNewNote" destination="tF0-bV-ZyW" id="KOv-4J-xfg"/>
                         <outlet property="notesTableView" destination="8PX-xz-DNH" id="Y4c-8p-cPk"/>
                     </connections>
                 </viewController>
@@ -1169,7 +1171,7 @@
             <objects>
                 <viewController storyboardIdentifier="NoteViewController" id="Djl-U9-qqq" customClass="NoteViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lXc-zi-VKq">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jJ5-4O-OME">
@@ -1288,6 +1290,9 @@
         <class className="AllNotesViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AllNotesViewController.h"/>
             <relationships>
+                <relationship kind="action" name="goBack:" candidateClass="UIBarButtonItem"/>
+                <relationship kind="action" name="goToRoom:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="addNewNote" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="notesTableView" candidateClass="UITableView"/>
             </relationships>
         </class>
@@ -1413,9 +1418,9 @@
         <segue reference="TwF-IC-8jf"/>
         <segue reference="5s0-9K-Shm"/>
         <segue reference="8hN-KL-ukg"/>
-        <segue reference="eJJ-Tb-A8d"/>
-        <segue reference="WWG-Xo-oVC"/>
-        <segue reference="vap-t8-tVb"/>
+        <segue reference="aP2-Cp-5GH"/>
+        <segue reference="Tet-2Z-6LC"/>
         <segue reference="yYa-b4-9nU"/>
+        <segue reference="hSP-JN-arM"/>
     </inferredMetricsTieBreakers>
 </document>
